--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -80,3 +80,31 @@ button{
     grid-template:  1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr ;
     gap: 15px;
 }
+
+@media only screen and (max-width: 600px) {
+    body{
+        background-image: linear-gradient(to left, #2282ff, #37faa9);
+        }
+        
+    .card{
+        width: 85px;
+        height: 85px;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: transform .5s;
+        }
+
+    #gameOver{
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.9);/* -- fundo preto com trasnparência */
+        color: white;
+        font-size: 50px;
+        display: none;
+        justify-content: center;align-items: center;
+        flex-direction: column;
+        top: 0;
+    }        
+}
